[package]
name = "s3_q"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
object_store = { version = "0.12.3", features = ["aws"] }
slatedb = "0.7.0"
tokio = "1.47.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
rand = "0.8"
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
mockall = "0.12"
test-case = "3.3"
rstest = "0.18"
tempfile = "3.8"
serde_json = "1.0"

[[example]]
name = "queue_example"

[[example]]
name = "benchmark"

[[example]]
name = "simple_benchmark"

[[example]]
name = "db_benchmark"

[[example]]
name = "batch_write"

[[example]]
name = "write"